--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	html {
+		@apply scroll-smooth box-border;
+	}
+
+	body {
+		@apply font-Inter text-black-two scroll-smooth ease-in-out duration-300;
+	}
+
+	img {
+		@apply inline-block;
+	}
+}
